Changed the globalstyling for the header and footer

--- a/src/index/index.html
+++ b/src/index/index.html
@@ -4,8 +4,8 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" href="assets/logo.png">
-    <link rel="stylesheet" href="./mvp.css">
+    <link rel="icon" href="/assets/logo.png">
+    <link rel="stylesheet" href="../mvp.css">
 
     <meta charset="utf-8">
     <meta name="description" content="My description">
@@ -13,7 +13,7 @@
 
     <title>Zoo-per</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styling.css">
+    <link rel="stylesheet" href="../globalstyling.css">
     <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
 </head>
 
@@ -22,11 +22,11 @@
         <nav>
             <a href="/"><img alt="Logo" src="/assets/logo.png" height="70"></a>
             <ul>
-                <li>About</li>
+                <li><a href="#">About</a></li>
                 <li><a href="#">Tickets</a></li>
-                <li><a href="#">Animals</a>
+                <li><a href="../animals/animals.html">Animals</a>
                     <ul>
-                        <li><a href="#">View all Animals</a></li>
+                        <li><a href="../animals/animals.html">View all Animals</a></li>
                         <li><a href="#">Flog</a></li>
                         <li><a href="#">Flecko</a></li>
                         <li><a href="#">Usain Blob</a></li>
@@ -36,14 +36,14 @@
                 </li>
             </ul>
         </nav>
-        <h1><span style="color: d31f63";>Zoo</span>-per</h1>
+        <h1><span style="color: #d31f63;">Zoo</span>-per</h1>
         <p>A zoo for big and small. You will only find Ai generated animals in our zoo. Don't feel hesitated to touch them.</p>
         <br>
     </header>
     <main>
         <hr>
         <section>
-            <img src="/assets/flog.png" alt="new animal, flog">
+            <img id="welcome-flog" src="/assets/flog.png" alt="new animal, flog">
             <h2>Welcome Flog, our new Flamingo Dog</h2>
             <p>Introducing our new furry friend, Flog the Flamingo Dog! With his unique appearance and playful personality, Flog is sure to capture your heart. Follow his adventures on our website and get to know our lovable pup. Welcome, Flog!</p>
             <button><strong>Learn more...</strong></button>
