--- a/src/index/index.html
+++ b/src/index/index.html
@@ -20,18 +20,18 @@
 <body>
     <header>
         <nav>
-            <a href="/"><img alt="Logo" src="/assets/logo.png" height="70"></a>
+            <a href="/src/index/index.html"><img alt="Logo" src="/assets/logo.png" height="70"></a>
             <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Tickets</a></li>
-                <li><a href="../animals/animals.html">Animals</a>
+                <li><a href="/src/about/about.html">About</a></li>
+                <li><a href="/src/tickets/tickets.html">Tickets</a></li>
+                <li><a href="/src/animals/animals.html">Animals</a>
                     <ul>
-                        <li><a href="../animals/animals.html">View all Animals</a></li>
-                        <li><a href="#">Flog</a></li>
-                        <li><a href="#">Flecko</a></li>
-                        <li><a href="#">Usain Blob</a></li>
-                        <li><a href="#">Rooster Coleman</a></li>
-                        <li><a href="#">Emäähnuel Lasker</a></li>
+                        <li><a href="/src/animals/animals.html">View all Animals</a></li>
+                        <li><a href="/src/animals/flog.html">Flog</a></li>
+                        <li><a href="/src/animals/flecko.html">Flecko</a></li>
+                        <li><a href="/src/animals/usain-blob.html">Usain Blob</a></li>
+                        <li><a href="/src/animals/rooster-coleman.html">Rooster Coleman</a></li>
+                        <li><a href="/src/animals/emaeaehnuel-lasker.html">Emäähnuel Lasker</a></li>
                     </ul>
                 </li>
             </ul>
