changed the footer for all current pages

--- a/src/index/index.html
+++ b/src/index/index.html
@@ -52,9 +52,10 @@
     <footer>
         <hr>
         <p>
-            <small>Impressum</small>
+            <small><a href="">Imprint</a></small>
             All Rights Reserved
-            <small>Datenschutzverordnung</small>
+            <small><a href="">Contact</a></small>
+            <small><a href="">Data protection regulation</a></small>
         </p>
     </footer>
 </body>
