changed the header so the current page is marked

--- a/src/animals/animals.html
+++ b/src/animals/animals.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="/src/about/about.html">About</a></li>
                 <li><a href="/src/tickets/tickets.html">Tickets</a></li>
-                <li><a href="/src/animals/animals.html">Animals</a>
+                <li>Animals</a>
                     <ul>
                         <li><a href="/src/animals/animals.html">View all Animals</a></li>
                         <li><a href="/src/animals/flog.html">Flog</a></li>
