--- a/src/tickets/tickets.html
+++ b/src/tickets/tickets.html
@@ -21,7 +21,7 @@
             <a href="/src/index/index.html"><img alt="Logo" src="/assets/logo.png" height="70"></a>
             <ul>
                 <li><a href="/src/about/about.html">About</a></li>
-                <li><a href="/src/tickets/tickets.html">Tickets</a></li>
+                <li>Tickets</li>
                 <li><a href="/src/animals/animals.html">Animals</a>
                     <ul>
                         <li><a href="/src/animals/animals.html">View all Animals</a></li>
