changed view more... to more...

--- a/src/animals/animals.html
+++ b/src/animals/animals.html
@@ -46,7 +46,7 @@
                     <h3>Flog</h3>
                     1.5 Years
                 </div>
-                <a href="../animals/flog.html">view more...</a>
+                <a href="../animals/flog.html">more...</a>
             </div>
             <!-- Flecko -->
             <div class="animal-box">
@@ -55,7 +55,7 @@
                     <h3>Flecko</h3>
                     9 Months
                 </div>
-                <a href="../animals/flecko.html">view more...</a>
+                <a href="../animals/flecko.html">more...</a>
             </div>
             <!-- Usain Blob -->
             <div class="animal-box">
@@ -64,7 +64,7 @@
                     <h3>Usain Blob</h3>
                     36 Years
                 </div>
-                <a href="../animals/usain-blob.html">view more...</a>
+                <a href="../animals/usain-blob.html">more...</a>
             </div>
             <!-- Rooster Coleman -->
             <div class="animal-box">
@@ -73,7 +73,7 @@
                     <h3>Rooster Coleman</h3>
                     58 Years
                 </div>
-                <a href="../animals/rooster-coleman.html">view more...</a>
+                <a href="../animals/rooster-coleman.html">more...</a>
             </div>
             <!-- Emäähnuel Lasker -->
             <div class="animal-box">
@@ -82,7 +82,7 @@
                     <h3>Emäähnuel Lasker</h3>
                     155 Years
                 </div>
-                <a href="../animals/emaeaehnuel-lasker.html">view more...</a>
+                <a href="../animals/emaeaehnuel-lasker.html">more...</a>
             </div>
         </section>
     </main>
