--- a/src/about/about.html
+++ b/src/about/about.html
@@ -18,8 +18,7 @@
 
   <body>
     <header>
-      <zoo-per-nav>
-      </zoo-per-nav>
+      <zoo-per-nav> </zoo-per-nav>
       <h1>About</h1>
       <h2>
         We have a small selection of animals to make sure each of them has a
@@ -29,8 +28,8 @@
     <main>
       <section>
         <p>
-          Welcome to our zoo! We're not your average animal park. Here at Zoo-per, 
-          all our animals are 100% artificial intelligence-generated.
+          Welcome to our zoo! We're not your average animal park. Here at
+          Zoo-per, all our animals are 100% artificial intelligence-generated.
           That's right, you won't find any boring, natural-born animals here.
           Our team of tech-savvy animal engineers has been hard at work creating
           the most unique, interesting, and even downright bizarre creatures
@@ -39,8 +38,8 @@
         <p>
           From the cuddly and cute to the downright creepy, our AI-generated
           animals are sure to amaze and entertain you. Want to see a rooster
-          with the biggest bizeps. We've got it. How about a challenging a sheep in chess?
-          We've got that too.
+          with the biggest bizeps. We've got it. How about a challenging a sheep
+          in chess? We've got that too.
         </p>
         <p>
           But don't take our word for it - come see for yourself! Our zoo is the
@@ -51,7 +50,6 @@
         </p>
       </section>
     </main>
-    <zoo-per-footer>
-    </zoo-per-footer>
+    <zoo-per-footer> </zoo-per-footer>
   </body>
 </html>
