--- a/src/animals/emaeaehnuel-lasker.html
+++ b/src/animals/emaeaehnuel-lasker.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <link rel="icon" href="/assets/logo.png" />
+    <link rel="stylesheet" href="../mvp.css" />
 
-<head>
-    <link rel="icon" href="/assets/logo.png">
-    <link rel="stylesheet" href="../mvp.css">
-
-    <meta charset="utf-8">
-    <meta name="description" content="My description">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="description" content="My description" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Zoo-per</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../globalstyling.css">
-    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../globalstyling.css" />
+    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon" />
     <script src="/components/nav.js" type="text/javascript" defer></script>
     <script src="/components/footer.js" type="text/javascript" defer></script>
     <script src="/components/animal.js" type="text/javascript" defer></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <zoo-per-nav>
-        </zoo-per-nav>
+      <zoo-per-nav> </zoo-per-nav>
     </header>
     <main>
-        <section>
-            <zoo-per-animal name="Emäähnuel Lasker" age="155 Years" description="Emäänuel Lasker, the chess-playing sheep, is a remarkable and captivating player. With a beautiful fleece that mirrors his elegant style, Emäänuel possesses a strategic mind and a natural talent for the game. He surprises opponents with his intuitive moves and exceptional ability to anticipate their strategies. Emäänuel's dedication and focus make him a formidable adversary, impressing chess enthusiasts around the world. His friendly nature and endearing personality have made him a beloved figure in the chess community. Emäänuel Lasker is a true inspiration, showcasing that intelligence and skill transcend species boundaries." image="/assets/emaeaehnuel-lasker.png" >
-            </zoo-per-animal>
-        </section>
+      <section>
+        <zoo-per-animal
+          name="Emäähnuel Lasker"
+          age="155 Years"
+          description="Emäänuel Lasker, the chess-playing sheep, is a remarkable and captivating player. With a beautiful fleece that mirrors his elegant style, Emäänuel possesses a strategic mind and a natural talent for the game. He surprises opponents with his intuitive moves and exceptional ability to anticipate their strategies. Emäänuel's dedication and focus make him a formidable adversary, impressing chess enthusiasts around the world. His friendly nature and endearing personality have made him a beloved figure in the chess community. Emäänuel Lasker is a true inspiration, showcasing that intelligence and skill transcend species boundaries."
+          image="/assets/emaeaehnuel-lasker.png"
+        >
+        </zoo-per-animal>
+      </section>
     </main>
-    <zoo-per-footer>
-    </zoo-per-footer>
-</body>
-
+    <zoo-per-footer> </zoo-per-footer>
+  </body>
 </html>
