--- a/src/animals/flecko.html
+++ b/src/animals/flecko.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <link rel="icon" href="/assets/logo.png" />
+    <link rel="stylesheet" href="../mvp.css" />
 
-<head>
-    <link rel="icon" href="/assets/logo.png">
-    <link rel="stylesheet" href="../mvp.css">
-
-    <meta charset="utf-8">
-    <meta name="description" content="My description">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="description" content="My description" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Zoo-per</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../globalstyling.css">
-    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../globalstyling.css" />
+    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon" />
     <script src="/components/nav.js" type="text/javascript" defer></script>
     <script src="/components/footer.js" type="text/javascript" defer></script>
     <script src="/components/animal.js" type="text/javascript" defer></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <zoo-per-nav>
-        </zoo-per-nav>
+      <zoo-per-nav> </zoo-per-nav>
     </header>
     <main>
-        <section>
-            <zoo-per-animal name="Flecko" age="9 Months" description="Introducing the Flecko, a mesmerizing flying gecko that defies gravity with its stunning abilities. With iridescent scales shimmering in shades of green, blue, and gold, the Flecko is a true marvel to behold. Equipped with translucent wings, it gracefully glides through the air. Its aerodynamic wings, supported by elongated ribs, allow for precise control in mid-air. The Flecko's adhesive pads on its feet enable effortless climbing and gripping to any surface. With its exceptional night vision and acute hearing, it hunts for small insects and invertebrates under the cover of darkness. This nocturnal creature is a master of the treetops, effortlessly navigating the dense foliage. The Flecko's remarkable appearance, gliding skills, and adaptability make it a captivating species to study. Prepare to be amazed by the incredible Flecko, a true testament to nature's wonder." image="/assets/flecko.png" >
-            </zoo-per-animal>
-        </section>
+      <section>
+        <zoo-per-animal
+          name="Flecko"
+          age="9 Months"
+          description="Introducing the Flecko, a mesmerizing flying gecko that defies gravity with its stunning abilities. With iridescent scales shimmering in shades of green, blue, and gold, the Flecko is a true marvel to behold. Equipped with translucent wings, it gracefully glides through the air. Its aerodynamic wings, supported by elongated ribs, allow for precise control in mid-air. The Flecko's adhesive pads on its feet enable effortless climbing and gripping to any surface. With its exceptional night vision and acute hearing, it hunts for small insects and invertebrates under the cover of darkness. This nocturnal creature is a master of the treetops, effortlessly navigating the dense foliage. The Flecko's remarkable appearance, gliding skills, and adaptability make it a captivating species to study. Prepare to be amazed by the incredible Flecko, a true testament to nature's wonder."
+          image="/assets/flecko.png"
+        >
+        </zoo-per-animal>
+      </section>
     </main>
-    <zoo-per-footer>
-    </zoo-per-footer>
-</body>
-
+    <zoo-per-footer> </zoo-per-footer>
+  </body>
 </html>
