--- a/src/animals/rooster-coleman.html
+++ b/src/animals/rooster-coleman.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <link rel="icon" href="/assets/logo.png" />
+    <link rel="stylesheet" href="../mvp.css" />
 
-<head>
-    <link rel="icon" href="/assets/logo.png">
-    <link rel="stylesheet" href="../mvp.css">
-
-    <meta charset="utf-8">
-    <meta name="description" content="My description">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="description" content="My description" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Zoo-per</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../globalstyling.css">
-    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../globalstyling.css" />
+    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon" />
     <script src="/components/nav.js" type="text/javascript" defer></script>
     <script src="/components/footer.js" type="text/javascript" defer></script>
     <script src="/components/animal.js" type="text/javascript" defer></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <zoo-per-nav>
-        </zoo-per-nav>
+      <zoo-per-nav> </zoo-per-nav>
     </header>
     <main>
-        <section>
-            <zoo-per-animal name="Rooster Coleman" age="58 Years" description="Rooster Coleman, a legendary fowl of incredible stature, possesses a mesmerizing physique that exemplifies strength and resilience. His muscular frame, adorned with feathers resembling an artist's masterpiece, is etched with intricate patterns, showcasing the results of his tireless dedication to physical fitness. With a gaze as sharp as his razor-edged talons, Rooster Coleman stands as a symbol of power and tenacity, captivating all who behold his shredded magnificence." image="/assets/rooster-coleman.png" >
-            </zoo-per-animal>
-        </section>
+      <section>
+        <zoo-per-animal
+          name="Rooster Coleman"
+          age="58 Years"
+          description="Rooster Coleman, a legendary fowl of incredible stature, possesses a mesmerizing physique that exemplifies strength and resilience. His muscular frame, adorned with feathers resembling an artist's masterpiece, is etched with intricate patterns, showcasing the results of his tireless dedication to physical fitness. With a gaze as sharp as his razor-edged talons, Rooster Coleman stands as a symbol of power and tenacity, captivating all who behold his shredded magnificence."
+          image="/assets/rooster-coleman.png"
+        >
+        </zoo-per-animal>
+      </section>
     </main>
-    <zoo-per-footer>
-    </zoo-per-footer>
-</body>
-
+    <zoo-per-footer> </zoo-per-footer>
+  </body>
 </html>
