--- a/src/tickets/tickets.html
+++ b/src/tickets/tickets.html
@@ -1,88 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <link rel="icon" href="/assets/logo.png" />
+    <link rel="stylesheet" href="../mvp.css" />
 
-<head>
-    <link rel="icon" href="/assets/logo.png">
-    <link rel="stylesheet" href="../mvp.css">
-
-    <meta charset="utf-8">
-    <meta name="description" content="My description">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="description" content="My description" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Zoo-per</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../globalstyling.css">
-    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../globalstyling.css" />
+    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon" />
     <script src="/components/nav.js" type="text/javascript" defer></script>
     <script src="/components/footer.js" type="text/javascript" defer></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <zoo-per-nav>
-        </zoo-per-nav>
-        <h2>Tickets can be bought online or via a call</h2>
+      <zoo-per-nav> </zoo-per-nav>
+      <h2>Tickets can be bought online or via a call</h2>
     </header>
     <main>
-        <section>
-            <table>
-                <thead>
-                  <tr>
-                    <th>Age</th>
-                    <th>Duration</th>
-                    <th>Price</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td rowspan="3">Child (0-12)</td>
-                    <td>1 hour</td>
-                    <td>$10</td>
-                  </tr>
-                  <tr>
-                    <td>2 hours</td>
-                    <td>$15</td>
-                  </tr>
-                  <tr>
-                    <td>3 hours</td>
-                    <td>$20</td>
-                  </tr>
-                  <tr>
-                    <td rowspan="3">Adult (13+)</td>
-                    <td>1 hour</td>
-                    <td>$15</td>
-                  </tr>
-                  <tr>
-                    <td>2 hours</td>
-                    <td>$25</td>
-                  </tr>
-                  <tr>
-                    <td>3 hours</td>
-                    <td>$35</td>
-                  </tr>
-                  <tr>
-                    <td colspan="3"><strong>Feed Options (available for all visitors)</strong></td>
-                  </tr>
-                  <tr>
-                    <td>-</td>
-                    <td>Animal food pellets</td>
-                    <td>$3</td>
-                  </tr>
-                  <tr>
-                    <td>-</td>
-                    <td>Animal food pellets + Carrots</td>
-                    <td>$6</td>
-                  </tr>
-                  <tr>
-                    <td>-</td>
-                    <td>Animal food pellets + Carrots + Lettuce</td>
-                    <td>$9</td>
-                  </tr>
-                </tbody>
-              </table>                                                        
-        </section>
+      <section>
+        <table>
+          <thead>
+            <tr>
+              <th>Age</th>
+              <th>Duration</th>
+              <th>Price</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td rowspan="3">Child (0-12)</td>
+              <td>1 hour</td>
+              <td>$10</td>
+            </tr>
+            <tr>
+              <td>2 hours</td>
+              <td>$15</td>
+            </tr>
+            <tr>
+              <td>3 hours</td>
+              <td>$20</td>
+            </tr>
+            <tr>
+              <td rowspan="3">Adult (13+)</td>
+              <td>1 hour</td>
+              <td>$15</td>
+            </tr>
+            <tr>
+              <td>2 hours</td>
+              <td>$25</td>
+            </tr>
+            <tr>
+              <td>3 hours</td>
+              <td>$35</td>
+            </tr>
+            <tr>
+              <td colspan="3">
+                <strong>Feed Options (available for all visitors)</strong>
+              </td>
+            </tr>
+            <tr>
+              <td>-</td>
+              <td>Animal food pellets</td>
+              <td>$3</td>
+            </tr>
+            <tr>
+              <td>-</td>
+              <td>Animal food pellets + Carrots</td>
+              <td>$6</td>
+            </tr>
+            <tr>
+              <td>-</td>
+              <td>Animal food pellets + Carrots + Lettuce</td>
+              <td>$9</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
     </main>
-    <zoo-per-footer>
-    </zoo-per-footer>
-</body>
+    <zoo-per-footer> </zoo-per-footer>
+  </body>
 </html>
