--- a/src/animals/animals.html
+++ b/src/animals/animals.html
@@ -1,79 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <link rel="icon" href="/assets/logo.png" />
+    <link rel="stylesheet" href="../mvp.css" />
 
-<head>
-    <link rel="icon" href="/assets/logo.png">
-    <link rel="stylesheet" href="../mvp.css">
-
-    <meta charset="utf-8">
-    <meta name="description" content="My description">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="description" content="My description" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Zoo-per</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../globalstyling.css">
-    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../globalstyling.css" />
+    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon" />
     <script src="/components/nav.js" type="text/javascript" defer></script>
     <script src="/components/footer.js" type="text/javascript" defer></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <zoo-per-nav>
-        </zoo-per-nav>
-        <h1>Animals</h1>
-        <h2>We have a small selection of animals to make sure each of them has a happy life</h2>
+      <zoo-per-nav> </zoo-per-nav>
+      <h1>Animals</h1>
+      <h2>
+        We have a small selection of animals to make sure each of them has a
+        happy life
+      </h2>
     </header>
     <main>
-        <section class="flexbox-wrapper">
-            <!-- Flog -->
-            <div class="animal-box">
-                <img src="/assets/flog.png" alt="Chess Sheep">
-                <div class="name-age-wrapper">
-                    <h3>Flog</h3>
-                    1.5 Years
-                </div>
-                <a href="../animals/flog.html">more...</a>
-            </div>
-            <!-- Flecko -->
-            <div class="animal-box">
-                <img src="/assets/flecko.png" alt="Chess Sheep">
-                <div class="name-age-wrapper">
-                    <h3>Flecko</h3>
-                    9 Months
-                </div>
-                <a href="../animals/flecko.html">more...</a>
-            </div>
-            <!-- Usain Blob -->
-            <div class="animal-box">
-                <img src="/assets/usain-blob.png" alt="Chess Sheep">
-                <div class="name-age-wrapper">
-                    <h3>Usain Blob</h3>
-                    36 Years
-                </div>
-                <a href="../animals/usain-blob.html">more...</a>
-            </div>
-            <!-- Rooster Coleman -->
-            <div class="animal-box">
-                <img src="/assets/rooster-coleman.png" alt="Chess Sheep">
-                <div class="name-age-wrapper">
-                    <h3>Rooster Coleman</h3>
-                    58 Years
-                </div>
-                <a href="../animals/rooster-coleman.html">more...</a>
-            </div>
-            <!-- Emäähnuel Lasker -->
-            <div class="animal-box">
-                <img src="/assets/emaeaehnuel-lasker.png" alt="Chess Sheep">
-                <div class="name-age-wrapper">
-                    <h3>Emäähnuel Lasker</h3>
-                    155 Years
-                </div>
-                <a href="../animals/emaeaehnuel-lasker.html">more...</a>
-            </div>
-        </section>
+      <section class="flexbox-wrapper">
+        <!-- Flog -->
+        <div class="animal-box">
+          <img src="/assets/flog.png" alt="Chess Sheep" />
+          <div class="name-age-wrapper">
+            <h3>Flog</h3>
+            1.5 Years
+          </div>
+          <a href="../animals/flog.html">more...</a>
+        </div>
+        <!-- Flecko -->
+        <div class="animal-box">
+          <img src="/assets/flecko.png" alt="Chess Sheep" />
+          <div class="name-age-wrapper">
+            <h3>Flecko</h3>
+            9 Months
+          </div>
+          <a href="../animals/flecko.html">more...</a>
+        </div>
+        <!-- Usain Blob -->
+        <div class="animal-box">
+          <img src="/assets/usain-blob.png" alt="Chess Sheep" />
+          <div class="name-age-wrapper">
+            <h3>Usain Blob</h3>
+            36 Years
+          </div>
+          <a href="../animals/usain-blob.html">more...</a>
+        </div>
+        <!-- Rooster Coleman -->
+        <div class="animal-box">
+          <img src="/assets/rooster-coleman.png" alt="Chess Sheep" />
+          <div class="name-age-wrapper">
+            <h3>Rooster Coleman</h3>
+            58 Years
+          </div>
+          <a href="../animals/rooster-coleman.html">more...</a>
+        </div>
+        <!-- Emäähnuel Lasker -->
+        <div class="animal-box">
+          <img src="/assets/emaeaehnuel-lasker.png" alt="Chess Sheep" />
+          <div class="name-age-wrapper">
+            <h3>Emäähnuel Lasker</h3>
+            155 Years
+          </div>
+          <a href="../animals/emaeaehnuel-lasker.html">more...</a>
+        </div>
+      </section>
     </main>
-    <zoo-per-footer>
-    </zoo-per-footer>
-</body>
+    <zoo-per-footer> </zoo-per-footer>
+  </body>
 </html>
