--- a/src/index/index.html
+++ b/src/index/index.html
@@ -2,42 +2,46 @@
 
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <link rel="icon" href="/assets/logo.png" />
+    <link rel="stylesheet" href="../mvp.css" />
 
-<head>
-    <link rel="icon" href="/assets/logo.png">
-    <link rel="stylesheet" href="../mvp.css">
-
-    <meta charset="utf-8">
-    <meta name="description" content="My description">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="description" content="My description" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Zoo-per</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../globalstyling.css">
-    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../globalstyling.css" />
+    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon" />
     <script src="/components/nav.js" type="text/javascript" defer></script>
     <script src="/components/footer.js" type="text/javascript" defer></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <zoo-per-nav>
-        </zoo-per-nav>
-        <h1><span style="color: #d31f63;">Zoo</span>-per</h1>
-        <p>A zoo for big and small. You will only find Ai generated animals in our zoo. Don't feel hesitated to touch them.</p>
-        <br>
+      <zoo-per-nav> </zoo-per-nav>
+      <h1><span style="color: #d31f63">Zoo</span>-per</h1>
+      <p>
+        A zoo for big and small. You will only find Ai generated animals in our
+        zoo. Don't feel hesitated to touch them.
+      </p>
+      <br />
     </header>
     <main>
-        <hr>
-        <section>
-            <img id="welcome-flog" src="/assets/flog.png" alt="new animal, flog">
-            <h2>Welcome Flog, our new Flamingo Dog</h2>
-            <p>Introducing our new furry friend, Flog the Flamingo Dog! With his unique appearance and playful personality, Flog is sure to capture your heart. Follow his adventures on our website and get to know our lovable pup. Welcome, Flog!</p>
-            <button><strong>Learn more...</strong></button>
-        </section>
+      <hr />
+      <section>
+        <img id="welcome-flog" src="/assets/flog.png" alt="new animal, flog" />
+        <h2>Welcome Flog, our new Flamingo Dog</h2>
+        <p>
+          Introducing our new furry friend, Flog the Flamingo Dog! With his
+          unique appearance and playful personality, Flog is sure to capture
+          your heart. Follow his adventures on our website and get to know our
+          lovable pup. Welcome, Flog!
+        </p>
+        <button><strong>Learn more...</strong></button>
+      </section>
     </main>
-    <zoo-per-footer>
-    </zoo-per-footer>
-</body>
-
+    <zoo-per-footer> </zoo-per-footer>
+  </body>
 </html>
