--- a/screens/animals/animals.html
+++ b/screens/animals/animals.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href="/assets/logo.png" />
-    <link rel="stylesheet" href="../mvp.css" />
+    <link rel="icon" href="../../assets/logo.png" />
+    <link rel="stylesheet" href="../../mvp.css" />
 
     <meta charset="utf-8" />
     <meta name="description" content="My description" />
@@ -10,15 +10,15 @@
 
     <title>Zoo-per</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="../globalstyling.css" />
-    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon" />
-    <script src="/components/nav.js" type="text/javascript" defer></script>
-    <script src="/components/footer.js" type="text/javascript" defer></script>
+    <link rel="stylesheet" href="../../global.css" />
+    <link rel="shortcut icon" href="../../assets/logo.png" type="image/x-icon" />
+    <script src="../../components/nav.js" type="text/javascript" defer></script>
+    <script src="../../components/footer.js" type="text/javascript" defer></script>
   </head>
 
   <body>
     <header>
-      <zoo-per-nav> </zoo-per-nav>
+      <zoo-per-nav root="../../"> </zoo-per-nav>
       <h1>Animals</h1>
       <h2>
         We have a small selection of animals to make sure each of them has a
@@ -74,6 +74,6 @@
         </div>
       </section>
     </main>
-    <zoo-per-footer> </zoo-per-footer>
+    <zoo-per-footer root="../../"> </zoo-per-footer>
   </body>
 </html>
