--- a/screens/tickets/tickets.html
+++ b/screens/tickets/tickets.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href="/assets/logo.png" />
-    <link rel="stylesheet" href="../mvp.css" />
+    <link rel="icon" href="../../assets/logo.png" />
+    <link rel="stylesheet" href="../../mvp.css" />
 
     <meta charset="utf-8" />
     <meta name="description" content="My description" />
@@ -10,15 +10,15 @@
 
     <title>Zoo-per</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="../globalstyling.css" />
-    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon" />
-    <script src="/components/nav.js" type="text/javascript" defer></script>
-    <script src="/components/footer.js" type="text/javascript" defer></script>
+    <link rel="stylesheet" href="../../global.css" />
+    <link rel="shortcut icon" href="../../assets/logo.png" type="image/x-icon" />
+    <script src="../../components/nav.js" type="text/javascript" defer></script>
+    <script src="../../components/footer.js" type="text/javascript" defer></script>
   </head>
 
   <body>
     <header>
-      <zoo-per-nav> </zoo-per-nav>
+      <zoo-per-nav root="../../"> </zoo-per-nav>
       <h2>Tickets can be bought online or via a call</h2>
     </header>
     <main>
@@ -91,6 +91,6 @@
         ></iframe>
       </section>
     </main>
-    <zoo-per-footer> </zoo-per-footer>
+    <zoo-per-footer root="../../"> </zoo-per-footer>
   </body>
 </html>
