--- a/screens/animals/animals.html
+++ b/screens/animals/animals.html
@@ -29,34 +29,34 @@
       <section class="flexbox-wrapper">
         <!-- Flog -->
         <div class="animal-box">
-          <img src="/assets/flog.png" alt="Chess Sheep" />
+          <img src="../../assets/flog.png" alt="Chess Sheep" />
           <div class="name-age-wrapper">
             <h3>Flog</h3>
             1.5 Years
           </div>
-          <a href="../animals/flog.html">more...</a>
+          <a href="../../animals/flog.html">more...</a>
         </div>
         <!-- Flecko -->
         <div class="animal-box">
-          <img src="/assets/flecko.png" alt="Chess Sheep" />
+          <img src="../../assets/flecko.png" alt="Chess Sheep" />
           <div class="name-age-wrapper">
             <h3>Flecko</h3>
             9 Months
           </div>
-          <a href="../animals/flecko.html">more...</a>
+          <a href="../../animals/flecko.html">more...</a>
         </div>
         <!-- Usain Blob -->
         <div class="animal-box">
-          <img src="/assets/usain-blob.png" alt="Chess Sheep" />
+          <img src="../../assets/usain-blob.png" alt="Chess Sheep" />
           <div class="name-age-wrapper">
             <h3>Usain Blob</h3>
             36 Years
           </div>
-          <a href="../animals/usain-blob.html">more...</a>
+          <a href="../../animals/usain-blob.html">more...</a>
         </div>
         <!-- Rooster Coleman -->
         <div class="animal-box">
-          <img src="/assets/rooster-coleman.png" alt="Chess Sheep" />
+          <img src="../../assets/rooster-coleman.png" alt="Chess Sheep" />
           <div class="name-age-wrapper">
             <h3>Rooster Coleman</h3>
             58 Years
@@ -65,7 +65,7 @@
         </div>
         <!-- Emäähnuel Lasker -->
         <div class="animal-box">
-          <img src="/assets/emaeaehnuel-lasker.png" alt="Chess Sheep" />
+          <img src="../../assets/emaeaehnuel-lasker.png" alt="Chess Sheep" />
           <div class="name-age-wrapper">
             <h3>Emäähnuel Lasker</h3>
             155 Years
