--- a/screens/animals/flog.html
+++ b/screens/animals/flog.html
@@ -27,7 +27,7 @@
           name="Flog"
           age="1.5 Years"
           description="Flog, the extraordinary Flamingo Dog, is a captivating canine companion that effortlessly merges the grace of a flamingo with the loyalty of a dog. With its slender legs, vibrant feathers, and playful nature, Flog stands out as a truly remarkable and enchanting companion. Whether gracefully striding or engaging in playful antics, Flog brings a touch of whimsy and joy to every moment, capturing the hearts of all who encounter its unique charm. Its remarkable appearance and endearing personality make Flog an extraordinary addition to any family seeking a loyal and fascinating four-legged friend."
-          image="/assets/flog.png"
+          image="../../assets/flog.png"
         >
         </zoo-per-animal>
       </section>
