--- a/screens/animals/rooster-coleman.html
+++ b/screens/animals/rooster-coleman.html
@@ -27,7 +27,7 @@
           name="Rooster Coleman"
           age="58 Years"
           description="Rooster Coleman, a legendary fowl of incredible stature, possesses a mesmerizing physique that exemplifies strength and resilience. His muscular frame, adorned with feathers resembling an artist's masterpiece, is etched with intricate patterns, showcasing the results of his tireless dedication to physical fitness. With a gaze as sharp as his razor-edged talons, Rooster Coleman stands as a symbol of power and tenacity, captivating all who behold his shredded magnificence."
-          image="/assets/rooster-coleman.png"
+          image="../../assets/rooster-coleman.png"
         >
         </zoo-per-animal>
       </section>
