--- a/screens/animals/usain-blob.html
+++ b/screens/animals/usain-blob.html
@@ -27,7 +27,7 @@
           name="Usain Blob"
           age="36 Years"
           description="Introducing Usain Blob, the extraordinary running blobfish! With its distinctive gelatinous physique and determined expression, Usain Blob takes the world of underwater athletics by storm. Moving with surprising agility and grace, this unique creature defies expectations, leaving competitors and spectators in awe as it glides through the water, showcasing unparalleled speed and finesse. Usain Blob's extraordinary abilities make it a true marvel of aquatic athleticism, captivating audiences and redefining what it means to be a champion in the underwater realm."
-          image="/assets/usain-blob.png"
+          image="../../assets/usain-blob.png"
         >
         </zoo-per-animal>
       </section>
