--- a/screens/contact/contact.html
+++ b/screens/contact/contact.html
@@ -25,7 +25,7 @@
         <address>
           Email: <a href="mailto:hello@zoo-per.com">hello@zoo-per.com</a>.<br />
           Visit us at:<br />
-          <a href="/src/index/index.html">zoo-per.com</a><br />
+          <a href="../../index.html">zoo-per.com</a><br />
           Box 123, <br />
           Kalkulkistan
         </address>
