--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
       <hr />
       <section>
-        <img id="welcome-flog" src="/assets/flog.png" alt="new animal, flog" />
+        <img id="welcome-flog" src="assets/flog.png" alt="new animal, flog" />
         <h2>Welcome Flog, our new Flamingo Dog</h2>
         <p>
           Introducing our new furry friend, Flog the Flamingo Dog! With his
