bad practice: inline styles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <header>
       <zoo-per-nav root=""> </zoo-per-nav>
-      <h1><span style="color: #d31f63">Zoo</span>-per</h1>
+      <h1><span class="purple">Zoo</span>-per</h1>
       <p>
         A zoo for big and small. You will only find Ai generated animals in our
         zoo. Don't feel hesitated to touch them.
