--- a/screens/tickets/tickets.html
+++ b/screens/tickets/tickets.html
@@ -81,6 +81,7 @@
           </tbody>
         </table>
         <iframe
+          title="google maps embed"
           src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d37164504.354824804!2d-38.07419172029445!3d55.26613788422862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sde!2sch!4v1683638852743!5m2!1sde!2sch"
           width="420"
           height="475"
