--- a/screens/animals/emaeaehnuel-lasker.html
+++ b/screens/animals/emaeaehnuel-lasker.html
@@ -28,6 +28,7 @@
           age="155 Years"
           description="Emäänuel Lasker, the chess-playing sheep, is a remarkable and captivating player. With a beautiful fleece that mirrors his elegant style, Emäänuel possesses a strategic mind and a natural talent for the game. He surprises opponents with his intuitive moves and exceptional ability to anticipate their strategies. Emäänuel's dedication and focus make him a formidable adversary, impressing chess enthusiasts around the world. His friendly nature and endearing personality have made him a beloved figure in the chess community. Emäänuel Lasker is a true inspiration, showcasing that intelligence and skill transcend species boundaries."
           image="../../assets/emaeaehnuel-lasker.png"
+          alt="Emäähnuel Lasker, Chess playing Sheep"
         >
         </zoo-per-animal>
       </section>
