fixed button link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           your heart. Follow his adventures on our website and get to know our
           lovable pup. Welcome, Flog!
         </p>
-        <button><strong>Learn more...</strong></button>
+        <button onclick="window.location.href = 'screens/animals/flog.html';"><strong>Learn more...</strong></button>
       </section>
     </main>
     <zoo-per-footer root=""> </zoo-per-footer>
