fixed the links

--- a/screens/animals/animals.html
+++ b/screens/animals/animals.html
@@ -34,7 +34,7 @@
             <h3>Flog</h3>
             1.5 Years
           </div>
-          <a href="../../animals/flog.html">more...</a>
+          <a href="flog.html">more...</a>
         </div>
         <!-- Flecko -->
         <div class="animal-box">
@@ -43,7 +43,7 @@
             <h3>Flecko</h3>
             9 Months
           </div>
-          <a href="../../animals/flecko.html">more...</a>
+          <a href="flecko.html">more...</a>
         </div>
         <!-- Usain Blob -->
         <div class="animal-box">
@@ -52,7 +52,7 @@
             <h3>Usain Blob</h3>
             36 Years
           </div>
-          <a href="../../animals/usain-blob.html">more...</a>
+          <a href="usain-blob.html">more...</a>
         </div>
         <!-- Rooster Coleman -->
         <div class="animal-box">
@@ -61,7 +61,7 @@
             <h3>Rooster Coleman</h3>
             58 Years
           </div>
-          <a href="../animals/rooster-coleman.html">more...</a>
+          <a href="rooster-coleman.html">more...</a>
         </div>
         <!-- Emäähnuel Lasker -->
         <div class="animal-box">
@@ -70,7 +70,7 @@
             <h3>Emäähnuel Lasker</h3>
             155 Years
           </div>
-          <a href="../animals/emaeaehnuel-lasker.html">more...</a>
+          <a href="emaeaehnuel-lasker.html">more...</a>
         </div>
       </section>
     </main>
