--- a/404.html
+++ b/404.html
@@ -1,1 +1,29 @@
-How to center a div?
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="icon" href="assets/logo.png" />
+    <link rel="stylesheet" href="mvp.css" />
+
+    <meta charset="utf-8" />
+    <meta name="description" content="My description" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <title>Zoo-per</title>
+    <link rel="stylesheet" href="global.css" />
+    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon" />
+    <script src="components/nav.js" type="text/javascript" defer></script>
+    <script src="components/footer.js" type="text/javascript" defer></script>
+  </head>
+
+  <body>
+    <header>
+      <zoo-per-nav root=""> </zoo-per-nav>
+      <h1>Page not found &#128542;</h1>
+    </header>
+    <main>
+        <button onclick="window.location.href = 'index.html';"><strong>Take me to the homepage</strong></button>
+      </section>
+    </main>
+    <zoo-per-footer root=""> </zoo-per-footer>
+  </body>
+</html>
