--- a/404.html
+++ b/404.html
@@ -21,8 +21,9 @@
       <h1>Page not found &#128542;</h1>
     </header>
     <main>
-        <button onclick="window.location.href = 'index.html';"><strong>Take me to the homepage</strong></button>
-      </section>
+      <button onclick="window.location.href = 'index.html';">
+        <strong>Take me to the homepage</strong>
+      </button>
     </main>
     <zoo-per-footer root=""> </zoo-per-footer>
   </body>
