--- a/404.html
+++ b/404.html
@@ -18,12 +18,14 @@
   <body>
     <header>
       <zoo-per-nav root=""> </zoo-per-nav>
-      <h1>Page not found &#128542;</h1>
+      <h1>Page not found &#128542;</h1><small>404</small>
     </header>
     <main>
-      <button onclick="window.location.href = 'index.html';">
-        <strong>Take me to the homepage</strong>
-      </button>
+      <section>
+          <button onclick="window.location.href = 'index.html';">
+            <strong>Take me to the homepage</strong>
+          </button>
+      </section>
     </main>
     <zoo-per-footer root=""> </zoo-per-footer>
   </body>
