--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
     </header>
     <main>
       <section>
-          <button onclick="window.location.href = 'index.html';">
+          <button onclick="window.location.href = '/index.html';">
             <strong>Take me to the homepage</strong>
           </button>
       </section>
