--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href="/assets/logo.png" />
+    <link rel="icon" href="/M293-Zoo-per/assets/logo.png" />
     <link rel="stylesheet" href="/mvp.css" />
 
     <meta charset="utf-8" />
@@ -9,10 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Zoo-per</title>
-    <link rel="stylesheet" href="/global.css" />
-    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon" />
-    <script src="/components/nav.js" type="text/javascript" defer></script>
-    <script src="/components/footer.js" type="text/javascript" defer></script>
+    <link rel="stylesheet" href="/M293-Zoo-per/global.css" />
+    <link rel="shortcut icon" href="/M293-Zoo-per/assets/logo.png" type="image/x-icon" />
+    <script src="/M293-Zoo-per/components/nav.js" type="text/javascript" defer></script>
+    <script src="/M293-Zoo-per/components/footer.js" type="text/javascript" defer></script>
   </head>
 
   <body>
@@ -22,7 +22,7 @@
     </header>
     <main>
       <section>
-          <button onclick="window.location.href = '/index.html';">
+          <button onclick="window.location.href = '/M293-Zoo-per/index.html';">
             <strong>Take me to the homepage</strong>
           </button>
       </section>
