--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="icon" href="/M293-Zoo-per/assets/logo.png" />
-    <link rel="stylesheet" href="/mvp.css" />
+    <link rel="stylesheet" href="/M293-Zoo-per/mvp.css" />
 
     <meta charset="utf-8" />
     <meta name="description" content="My description" />
@@ -17,7 +17,7 @@
 
   <body>
     <header>
-      <zoo-per-nav root=""> </zoo-per-nav>
+      <zoo-per-nav root="/M293-Zoo-per/"> </zoo-per-nav>
       <h1>Page not found &#128542;</h1><small>404</small>
     </header>
     <main>
@@ -27,6 +27,6 @@
           </button>
       </section>
     </main>
-    <zoo-per-footer root=""> </zoo-per-footer>
+    <zoo-per-footer root="/M293-Zoo-per/"> </zoo-per-footer>
   </body>
 </html>
