w3Validatior fix, changed javascript links

--- a/404.html
+++ b/404.html
@@ -11,8 +11,8 @@
     <title>Zoo-per</title>
     <link rel="stylesheet" href="/M293-Zoo-per/global.css" />
     <link rel="shortcut icon" href="/M293-Zoo-per/assets/logo.png" type="image/x-icon" />
-    <script src="/M293-Zoo-per/components/nav.js" type="text/javascript" defer></script>
-    <script src="/M293-Zoo-per/components/footer.js" type="text/javascript" defer></script>
+    <script src="/M293-Zoo-per/components/nav.js" defer></script>
+    <script src="/M293-Zoo-per/components/footer.js" defer></script>
   </head>
 
   <body>
