--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="global.css" />
     <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon" />
-    <script src="components/nav.js" type="text/javascript" defer></script>
-    <script src="components/footer.js" type="text/javascript" defer></script>
+    <script src="components/nav.js" defer></script>
+    <script src="components/footer.js" defer></script>
   </head>
 
   <body>
