--- a/404.html
+++ b/404.html
@@ -10,7 +10,11 @@
 
     <title>Zoo-per</title>
     <link rel="stylesheet" href="/M293-Zoo-per/global.css" />
-    <link rel="shortcut icon" href="/M293-Zoo-per/assets/logo.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="/M293-Zoo-per/assets/logo.png"
+      type="image/x-icon"
+    />
     <script src="/M293-Zoo-per/components/nav.js" defer></script>
     <script src="/M293-Zoo-per/components/footer.js" defer></script>
   </head>
@@ -18,13 +22,14 @@
   <body>
     <header>
       <zoo-per-nav root="/M293-Zoo-per/"> </zoo-per-nav>
-      <h1>Page not found &#128542;</h1><small>404</small>
+      <h1>Page not found &#128542;</h1>
+      <small>404</small>
     </header>
     <main>
       <section>
-          <button onclick="window.location.href = '/M293-Zoo-per/index.html';">
-            <strong>Take me to the homepage</strong>
-          </button>
+        <button onclick="window.location.href = '/M293-Zoo-per/index.html';">
+          <strong>Take me to the homepage</strong>
+        </button>
       </section>
     </main>
     <zoo-per-footer root="/M293-Zoo-per/"> </zoo-per-footer>
