--- a/screens/contact/contact.html
+++ b/screens/contact/contact.html
@@ -11,7 +11,11 @@
     <title>Zoo-per</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../../global.css" />
-    <link rel="shortcut icon" href="../../assets/logo.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="../../assets/logo.png"
+      type="image/x-icon"
+    />
     <script src="../../components/nav.js" defer></script>
     <script src="../../components/footer.js" defer></script>
   </head>
